resources/css/html/dialog.css
dialog {
    display: flex;
    flex-direction: column;
    max-inline-size: min(90vw, var(--size-content-3));
    max-block-size: min(80vh, 100%);
    padding: 0;
    position: fixed;
    margin: auto;
    inset: 0;
    z-index: 1050;
    border: 0;
    transition: opacity .5s ease-in-out;

    > form {
        display: flex;
        flex-direction: column;
        flex: 1;
        min-block-size: 0;
        overflow: hidden;
    }

    header {
        flex-shrink: 0;
    }

    article {
        flex: 1;
        overflow-y: auto;
        overscroll-behavior-y: contain;
        min-block-size: 0;
    }

    footer {
        flex-shrink: 0;

        menu:only-child {
            margin-inline-start: auto;
        }
    }
}

dialog:not([open]) {
    pointer-events: none;
    opacity: 0;
}

dialog::backdrop {
    backdrop-filter: blur(5px);
    transition: backdrop-filter .3s ease;
}

html:has(dialog[open]) {
    overflow: hidden;
}

@media (max-width: 768px) {
    dialog {
        margin-block-end: 0;
        border-end-end-radius: 0;
        border-end-start-radius: 0;
    }
}

